--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -161,7 +161,7 @@
 			</tr>
 			<tr>
 				<td class="schedule-lecture" rowspan="3">Zajęcia</td>
-				<td class="schedule-lecture" rowspan="3"><!--a href="uj/zajecia/24-25l/ljk5/zajecia/3"-->Arkusz 3<!--/a--></td>
+				<td class="schedule-lecture" rowspan="3"><a href="uj/zajecia/24-25l/ljk5/zajecia/czytanie/2">Arkusz 2</a></td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
@@ -174,7 +174,7 @@
 			<tr>
 				<th scope="row">13</th>
 				<td>18 czerwca 2025</td>
-				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/4"-->Egzamin <nobr>(9.00–10.00, s. 2.05)</nobr></a></td>
+				<td class="schedule-exam" colspan="2"><!--a href="uj/zajecia/24-25l/ljk5/testy/4"-->Egzamin <nobr>(9.00–10.00, s. 2.02)</nobr></a></td>
 			</tr>
 		</tbody>
 	</table>
@@ -242,28 +242,23 @@
 				<th scope="row" rowspan="5">8</th>
 				<td rowspan="5">14 maja 2025</td>
 				<td class="schedule-presentation">Praca domowa 1</td>
-				<td class="schedule-presentation">Karolina Tkacz - webtoony</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/1">Karolina Tkacz - webtoony</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 2</td>
-				<td class="schedule-presentation">Sara Skwarko - książka fantastyczna</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/2">Sara Skwarko - książka fantastyczna</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 3</td>
-				<td class="schedule-presentation">Aleksandra Maksylewicz - samobójstwa (statystyki)</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/3">Aleksandra Maksylewicz - samobójstwa (statystyki)</a></td>
 			</tr>
 			<trt>
 				<td class="schedule-presentation">Praca domowa 4</td>
-				<td class="schedule-presentation">Gabriela Barabasz - przemysł kosmetyczny</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/4">Gabriela Barabasz - przemysł kosmetyczny</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 5</td>
-				<td class="schedule-presentation">Anna Kawałek - książka kryminalna</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/5">Anna Kawałek - książka kryminalna</a></td>
 			</tr>
 			<tr>
 				<th scope="row">9</th>
@@ -277,8 +272,8 @@
 				<td rowspan="2">28 maja 2025</td>
 			</tr>
 			<tr>
-				<td class="schedule-exam"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2">Kolokwium 2</a></td>
-				<td class="schedule-exam" colspan="2">zwierzęta</td>
+				<td class="schedule-exam">Kolokwium 2</td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/2">zwierzęta</a></td>
 			</tr>
 			<tr>
 				<th scope="row">11</th>
@@ -291,37 +286,31 @@
 				<th scope="row" rowspan="5">12</th>
 				<td rowspan="5">11 czerwca 2025</td>
 				<td class="schedule-presentation">Praca domowa 6</td>
-				<td class="schedule-presentation">Joanna Radwańska - tłumaczenie audiowizualne</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/6">Joanna Radwańska - tłumaczenie audiowizualne</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 7</td>
-				<td class="schedule-presentation">Natalia Gadomska - polityczne podziały w Korei Płd. / posiadanie broni jądrowej przez Koreę Płd. / urbanizacja w Seulu</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/7">Natalia Gadomska - posiadanie broni jądrowej przez Koreę Płd.</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 8</td>
-				<td class="schedule-presentation">Katarzyna Kloc - fragment komiksu</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/8">Katarzyna Kloc - fragment komiksu</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 9</td>
-				<td class="schedule-presentation">Julia Świegoda - operacje plastyczne podbródka</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/9">Julia Świegoda - operacje plastyczne podbródka</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 10</td>
-				<td class="schedule-presentation">Wiktoria Świt - dzień z życia K-pop trainee</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/10">Wiktoria Świt - dzień z życia K-pop trainee</a></td>
 			</tr>
 		</tbody>
 		<tbody>
 			<tr>
 				<th scope="row">13</th>
 				<td>18 czerwca 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(10.15–11.15, s. 2.05)</nobr></a></td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(10.15–11.15, s. 2.02)</nobr></a></td>
+				<td class="schedule-exam" colspan="2">?, psychologia</td>
 			</tr>
 		</tbody>
 	</table>
@@ -387,7 +376,7 @@
 			<tr>
 				<th scope="row">9</th>
 				<td>17 czerwca 2025</td>
-				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(11.00–12.00, s. 2.01)</nobr></a></td>
+				<td class="schedule-exam"><!--a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/4"-->Egzamin <nobr>(11.00–12.00, s. 2.02)</nobr></a></td>
 				<td class="schedule-exam">文, 食</td>
 			</tr>
 		</tbody>
