--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/2/index.html
@@ -447,7 +447,7 @@
 	</div>
 	<ol>
 		<li>요약형 정보는 가장 효율적인 정보 습득 방식이다.</li>
-		<li>요약형 정보는 사람들의 사고력 저하를 초래할 수 있다.</li>
+		<li>요약형 정보는 사람들의 사고력 저하를 초래할 수 있다. <strong class="correct">✓</strong></li>
 		<li>사람들이 습득해야 할 지식의 양이 크게 증가하고 있다.</li>
 		<li>짧게 정돈된 지식 덕분에 정보 처리 시간을 줄일 수 있다.</li>
 	</ol>
@@ -475,6 +475,12 @@
 	<p class="topik-textbox">
 		왕관은 과거 지배 계층이 착용했던 대표적인 장신구이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉠&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 장식도 화려하게 더해져 그것을 쓴 왕의 지위를 더욱 돋보이게 했다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉡&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 오늘날 왕관이 가졌던 힘과 지위의 의미는 약화되었으나 고귀한 이미지는 남아 여러 디자인에서 발견된다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉢&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 아름다움이 강조되어야 할 신부의 머리 장식이나 여러 액세서리에 왕관이 활용되고 있는 것이다. (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;㉣&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;)
 	</p>
+	<ol>
+		<li>㉠ <strong class="correct">✓</strong></li>
+		<li>㉡</li>
+		<li>㉢</li>
+		<li>㉣</li>
+	</ol>
 </div>
 <div class="exam-question">
 	<h3>40.</h3>
@@ -510,7 +516,7 @@
 	<ol>
 		<li>㉠</li>
 		<li>㉡</li>
-		<li>㉢</li>
+		<li>㉢ <strong class="correct">✓</strong></li>
 		<li>㉣</li>
 	</ol>
 </div>
