--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/3/index.html
@@ -147,7 +147,31 @@
 <h2 class="homework">숙제</h2>
 
 <p>15-1. 산양은 ‘살아있는 화석’이라고도 불리는데</p>
+<ul>
+	<li>Gorale długoogonowe nazywane są również „żywymi skamielinami”</li>
+	<li>Goral długoogonowy nazywany jest również “żywą skamieliną”,</li>
+	<li>Gorale długoogonowe są również nazywane „żywymi skamielinami”,</li>
+	<li>Goral długoogonowy nazywany jest "żywą skamieniałością",</li>
+	<li>Góral długoogonowy nazywany jest również „żywą skamieliną”,</li>
+	<li>O goralu długoogonowym mówi się, że jest „żywą skamielinąˮ,</li>
+	<li>Goorale nazywane są również “żywymi skamielinami”</li>
+	<li>Goral długoogonowy nazywany jest również żyjącymi górami skalistymi,</li>
+	<li>Goral długoogonowy jest również nazywany „żyjącą skamieliną”, ponieważ</li>
+	<li>Goral długoogonowy nazywany jest „żyjąca skamieliną”</li>
+</ul>
 <p>15-2. 지구에서 처음 발견되었을 때와 지금 모습이 거의 같기 때문입니다.</p>
+<ul>
+	<li>Ponieważ wyglądają teraz niemal tak samo, jak wtedy, kiedy odkryto je na Ziemi.</li>
+	<li>ponieważ jego wygląd prawie się nie zmienił od momentu odkrycia tego gatunku na Ziemi.</li>
+	<li>ponieważ wyglądają prawie tak samo jak wtedy, gdy po raz pierwszy odkryto je na Ziemi.</li>
+	<li>ponieważ wygląda prawie tak samo, jak w momencie, kiedy został odkryty po raz pierwszy na Ziemi.</li>
+	<li>ponieważ jego wygląd prawie nie zmienił się od czasu pierwszego odkrycia na Ziemi.</li>
+	<li>ponieważ jego wygląd jest niemal identyczny z tym, jak wyglądał, gdy został po raz pierwszy odkryty na Ziemi.</li>
+	<li>ponieważ ich obecny wygląd jest prawie taki sam jak wtedy, kiedy po raz pierwszy odkryto istnienie tych zwierząt na ziemi.</li>
+	<li>ponieważ wygląda prawie tak samo jak wtedy, gdy został odkryty na ziemi po raz pierwszy.</li>
+	<li>Wygląda niemal tak samo jak w momencie, gdy został odkryty na Ziemi po raz pierwszy.</li>
+	<li>z powodu niezmieniającego się wyglądu, od momentu (jego) pojawienia się na ziemi po raz pierwszy, aż do teraz.</li>
+</ul>
 
 <hr class="homework">
 
@@ -328,6 +352,8 @@
 <p>36-2. DMZ 일원에서 집단으로 생활하며 활발하게 번식하고 있는 것이 확인되었습니다.</p>
 <p>37. 이렇게 안정적인 서식지를 발견하는 경우는 매우 드물다고 합니다.</p>
 
+<h2 class="homework">숙제</h2>
+
 <h3>어휘</h3>
 
 <ul>
@@ -346,12 +372,75 @@
 <h3>번역</h3>
 
 <p>38. 열목어</p>
+<ul>
+	<li>Lenok</li>
+</ul>
 <p>38-1. 멸종위기종이자 연어과의 민물고기로</p>
+<ul>
+	<li>Jest to zagrożony gatunek ryby słodkowodnej z rodziny łososiowatych</li>
+	<li>Lenok, zagrożona wyginięciem słodkowodna ryba z rodziny łososiowatych,</li>
+	<li>Mimo że zagrożony wyginięciem [lenok] należący do ryb słodkowodnych z rodziny łososiowatych</li>
+	<li>Lenok, zagrożony wyginięciem gatunek ryby słodkowodnej z łososiowatych,</li>
+	<li>Lenok, zagrożona wyginięciem, słodkowodna ryba z rodziny łososiowatych,</li>
+	<li>Jako ryba słodkowodna z rodziny łososiowatych, która jest zagrożona wyginięciem</li>
+	<li>Zagrożony wyginięciem gatunek z rodziny łososiowatych ryb lubiących wody słodkie,</li>
+</ul>
 <p>38-2. 하천 상류의 맑고 차가운 물에서만 서식하는 열목어도</p>
+<ul>
+	<li>który żyje wyłącznie w czystych i zimnych wodach górnego biegu rzek,</li>
+	<li>żyje wyłącznie w czystych, chłodnych wodach górnych biegów strumieni</li>
+	<li>zamieszkuje wyłącznie czyste i zimne wody górnego biegu strumienia,</li>
+	<li>zamieszkujący wyłącznie czyste i zimne wody w górnych biegach rzek,</li>
+	<li>która zamieszkuje jedynie czyste i zimne wody górnych biegów rzek,</li>
+	<li>Lenok, zamieszkujący wyłącznie czyste i zimne wody górnych brzegów rzek,</li>
+	<li>to żyjący w czystych strumieniach o zimnej wodzie lenok,</li>
+</ul>
 <p>38-3. DMZ 일원에 서식합니다.</p>
+<ul>
+	<li>w strefie zdemilitaryzowanej.</li>
+	<li>na całym terenie DMZ.</li>
+	<li>uczynił on również cały obszar strefy DMZ swoim siedliskiem.</li>
+	<li>występuje również na obszarze DMZ.</li>
+	<li>również występuje w rejonie strefy zdemilitaryzowanej.</li>
+	<li>występuje w całej strefie DMZ.</li>
+	<li>którego można spotkać wśród mieszkańców strefy zdemilitaryzowanej.</li>
+	<li>38. Lenok, zagrożona wyginięciem słodkowodna ryba z rodziny łososiowatych, która zamieszkuje jedynie w czystych i zimnych wodach górnego biegu rzeki, występuje również w rejonie DMZ.</li>
+</ul>
 <p>39-1. DMZ 남한 최북단 지역의 두타연은</p>
+<ul>
+	<li>W wąwozie Dutayeon, najbardziej wysuniętym na północ punkcie DMZ</li>
+	<li>Wąwóz Dutayeon, położony w najbardziej wysuniętym na północ punkcie DMZ,</li>
+	<li>Wąwóz Dutayeon znajdujący się w najbardziej wysuniętym na północ punkcie strefy zdemilitaryzowanej na terenie Korei Południowej</li>
+	<li>Wąwóz Dutayeon, najbardziej wysunięty punkt na północ południowokoreańskiej części DMZ,</li>
+	<li>Wąwóz Dutayeon, najbardziej wysunięty na północ obszar Korei Południowej w pobliżu DMZ,</li>
+	<li>Wąwóz Dutayeon, czyli najbardziej wysunięty na północ region po stronie południowokoreańskiej strefy zdemilitaryzowanej,</li>
+	<li>Wąwóz Dutayeon, czyli najbardziej wysunięty na północ punkt DMZ</li>
+	<li>Najbardziej wysunięty na północ region Korei Południowej, zwany wąwozem Dutayeon,</li>
+</ul>
 <p>39-2. 수십 년 간 인간의 발길이 닿지 않은 청정지역으로</p>
+<ul>
+	<li>krystalicznie czystym obszarze, od dziesięcioleci nietkniętym przez człowieka</li>
+	<li>to nieskazitelnie czysty region, który przez dziesiątki lat pozostał nienaruszony przez człowieka.</li>
+	<li>od wielu lat pozostaje czystym obszarem nietkniętym przez człowieka</li>
+	<li>to nieskażony region, od dziesięcioleci nie dotknięty przez człowieka,</li>
+	<li>to dziewiczy teren, nietknięty przez ludzi przez dziesiątki lat</li>
+	<li>jest niezwykle czystym obszarem, który od dekad nie został dotknięty ręką człowieka, przez co</li>
+	<li>Jako czysty obszar, w którym przez dziesiątki lat nie było ingerencji człowieka</li>
+	<li>przez wiele lat nieskażony obecnością człowieka,</li>
+</ul>
 <p>39-3. 열목어의 국내 최대 서식지입니다.</p>
+<ul>
+	<li>znajduje się największe siedlisko tego gatunku.</li>
+	<li>Jest to największe siedlisko lenoka w Korei Południowej.</li>
+	<li>i jest największym siedliskiem lenoka w kraju.</li>
+	<li>będący największym krajowym siedliskiem lenoka.</li>
+	<li>i największe w kraju siedlisko lenoka.</li>
+	<li>stanowi największe w kraju siedlisko lenoków.</li>
+	<li>Jest największym krajowym siedliskiem lenoka.</li>
+	<li>jest największym w Korei miejscem, zamieszkanym przez lenoka.</li>
+</ul>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
