--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/5/index.html
@@ -247,9 +247,49 @@
 <h3>번역</h3>
 
 <p>22. 재혼을 바라는 남성이 여성의 ‘가사’ 능력보다 정치 성향을 더 중요하게 생각한다는 조사 결과도 있다.</p>
+<ul>
+	<li>Badanie wykazało również, że mężczyźni chcący ponownie się ożenić uważają, że poglądy polityczne są ważniejsze od umiejętności wykonywania obowiązków domowych.</li>
+	<li>Badanie wykazało również, że mężczyźni pragnący ponownego małżeństwa cenili bardziej poglądy polityczne swojej wybranki niż jej umiejętności w prowadzeniu domu.</li>
+	<li>Wyniki badań pokazują również, że mężczyźni, którzy pragną ponownie się ożenić, uważają poglądy polityczne partnerki za ważniejsze od jej umiejętności prowadzenia domu.</li>
+	<li>Istnieją także badania, które pokazały, że mężczyźni pragnący ponownego małżeństwa bardziej cenią poglądy polityczne kobiet niż ich umiejętności w zakresie prowadzenia domu.</li>
+	<li>Istnieją również badania wskazujące, że mężczyźni pragnący ponownie się ożenić częściej zwracają uwagę na poglądy polityczne kobiety niż na jej umiejętności związane z prowadzeniem domu.</li>
+	<li>Wyniki badań pokazują również, że dla mężczyzn pragnących się ponownie ożenić, w nowej partnerce ważniejsze będą jej polityczne poglądy aniżeli jej umiejętność prowadzenia domu.</li>
+	<li>Istnieją też wyniki badań które pokazują, iż mężczyźni którzy chcą ponowie się ożenić, bardziej cenią poglądy polityczne kobiety niż jej „umiejętności” w zakresie prowadzenia domu.</li>
+	<li>Istnieją również wyniki badań wskazujące, że mężczyźni, którzy ponownie chcą wyjść za mąż, uważają za ważniejsze poglądy polityczne kobiet niż ich umiejętności zarządzania domem.</li>
+</ul>
 <p>23. 재혼정보업체 온리-유, 결혼정보회사 비에나래가 지난해 1월 발표한 조사에 따르면,</p>
+<ul>
+	<li>Według badania opublikowanego w styczniu ubiegłego roku, przez firmę Only You i firmę Viennarae, zajmującymi się ponownym zawieraniem małżeństw</li>
+	<li>Według ankiety przedstawionej w styczniu ubiegłego roku przez biura matrymonialne Only-You oraz Bien-Aller,</li>
+	<li>Według ankiety opublikowanej w styczniu ubiegłego roku przez firmy matrymonialne Only You i Bienarae,</li>
+	<li>Według badania opublikowanego w styczniu ubiegłego roku przez agencję matrymonialną Only-You, specjalizującą się w ponownych związkach, oraz firmę Bienarae zajmującą się kojarzeniem małżeństw,</li>
+	<li>Zgodnie z badaniem przeprowadzonym w styczniu ubiegłego roku przez agencję matrymonialną Only-You oraz firmę ślubną Bienaere,</li>
+	<li>Według ankiety opublikowanej w styczniu zeszłego roku przez firmę informacyjną ds. ponownego małżeństwa Only-you oraz agencję matrymonialną Bienarae,</li>
+	<li>Zgodnie z badaniem opublikowanym w styczniu ubiegłego roku  przez agencję matrymonialną Only -You i firmę zajmująca się informacjami na temat małżeństw,</li>
+	<li>Zgodnie z badaniem, które zostało przedstawione w styczniu ubiegłego roku przez agencję matrymonialną Only-You oraz firmę pośredniczącą Vienarae,</li>
+</ul>
 <p>24. 남성 응답자는 여성의 ‘경제 관념’(29.5%)이 가장 중요하다고 답했고 ‘자녀관’(23.6%), ‘정치 성향’(18.7%), ‘가사에 대한 인식’(15.1%)이 뒤를 이었다. </p>
+<ul>
+	<li>ankietowani mężczyźni odpowiedzieli, że u kobiet najważniejsze są „poglądy gospodarcze’(29,5%)”, „nastawienie do dzieci”(23,6%), „poglądy polityczne” (18,7%) i „postrzeganie obowiązków domowych”(15.1%).</li>
+	<li>najwięcej mężczyzn (29,5%) wskazało, że najważniejsze jest dla nich „podejście do finansów” kobiet. 23,6% uznało za najważniejsze poglądy na temat wychowania dzieci, 18,7% – poglądy polityczne, a 15,1% – podejście do obowiązków domowych.</li>
+	<li>mężczyźni uznają, że najważniejsze u kobiety jest jej „podejście do finansów” (29,5%), a następnie: „stosunek do posiadania dzieci” (23,6%), „poglądy polityczne” (18,7%) oraz „poglądy dotyczące prowadzenia domu” (15,1%).</li>
+	<li>mężczyźni wskazali, że najważniejsze u kobiety są dla nich: „podejście do kwestii finansowych” (29,5%), następnie „stosunek do posiadania dzieci” (23,6%), „poglądy polityczne” (18,7%) oraz „podejście do obowiązków domowych” (15,1%).</li>
+	<li>mężczyźni jako najważniejszą cechę partnerki wskazywali „podejście do finansów” (29,5%), następnie „stosunek do posiadania dzieci” (23,6%), „poglądy polityczne” (18,7%) oraz „podejście do obowiązków domowych” (15,1%).</li>
+	<li>mężczyźni wskazali, że najważniejsze u kobiety jest jej “spojrzenie na sprawy ekonomiczne” (29,5%), a kolejno istotnymi okazały się “poglądy dotyczące dzieci” (23,6%), “orientacja polityczna” (18,7%) oraz “poglądy dotyczące prowadzenia domu” (15,1%).</li>
+	<li>meżczyźni którzy wzięli udział w badaniu odpowiedzieli, że najważniejsza dla nich jest „świadomość ekonomiczna” kobiety (29,5%), poglądy polityczne (18,7%) a następnie podejście do obowiązków domowych (15,1%).</li>
+	<li>Mężczyźni za najważniejszą cechę u kobiet uważają podejście do finansów (29,5%); na dalszych miejscach znalazły się poglądy na temat wychowania dzieci (23,6%), poglądy polityczne (18,7%) oraz stosunek do obowiązków domowych (15,1%).</li>
+</ul>
 <p>25. 남녀가 소개팅하기 전에 ‘어느 당을 지지하는지’를 묻는 풍속도 생겨난 상태라고 한다.</p>
+<ul>
+	<li>Mówi się, że ukształtował się zwyczaj, że mężczyźni i kobiety przed randkami pytają „jaką partię popierasz”.</li>
+	<li>Pojawił się także zwyczaj zadawania pytania “Jaką partię popierasz?” przed randkami.</li>
+	<li>Mówi się też, że istnieje zwyczaj pytania „którą partię popiera” druga osoba przed pójściem z nią na randkę w ciemno.</li>
+	<li>Mówi się, że pojawił się też zwyczaj pytania o to, jaką partię się popiera, zanim mężczyzna i kobieta spotkają się na randce w ciemno.</li>
+	<li>Mówi się wręcz, że przed randką w ciemno niektórzy pytają już, które ugrupowanie polityczne druga osoba popiera.</li>
+	<li>Mówi się również, że pojawił się zwyczaj pytania “Która partię wspierasz?” zanim kobieta i mężczyzna wybiorą się na randkę w ciemno.</li>
+	<li>Mówi się, iż kobiety i mężczyźni przed randką w ciemno zaczęli pytać się nawzajem „jaką partię popierasz”, co stało się nowym zwyczajem.</li>
+	<li>Mówi się, że przed randką w ciemno powstał nowy zwyczaj polegający na pytaniu „którą partię polityczną popierasz”.</li>
+</ul>
 
 <hr class="homework">
 
