--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/6/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/6/index.html
@@ -38,14 +38,41 @@
 <h3>번역</h3>
 
 <p>0. 한국인의 자기 개념</p>
+<ul>
+	<li>Koncepcja własnego „ja” u Koreańczyków</li>
+</ul>
 <p>1. 한국 대학생들에게 ‘너는 누구냐’라고 물으면 무엇을 묻는지를 몰라 황당해 한다.</p>
+<ul>
+	<li>Gdy koreańskim studentom zada się pytanie „Kim jesteś?”, często są oni zdezorientowani i nie wiedzą, o co właściwie są pytani.</li>
+</ul>
 <p>2. 황당해하는 이유는 여러 가지가 있다.</p>
+<ul>
+	<li>Można wymienić kilka przyczyn tego zakłopotania.</li>
+</ul>
 <p>3-1. 먼저 이러한 질문을 과거에 받아본 적이 거의 없었기 때문에</p>
+<ul>
+	<li>Po pierwsze, mogli do tej pory nigdy nie usłyszeć podobnego pytania,</li>
+</ul>
 <p>3-2. 이에 대한 대답을 심각하게 생각해 보지 못했거나</p>
+<ul>
+	<li>w związku z czym szczególnie się nad nim nie zastanawiali</li>
+</ul>
 <p>3-3. 구체적인 대답을 마련해 놓지 못했다는 점을 들 수 있다.</p>
+<ul>
+	<li>ani nie przygotowali sobie wcześniej konkretnej odpowiedzi.</li>
+</ul>
 <p>4. 또한 이러한 질문에 대한 대답을 하는 데 대한 맥락이 없기 때문이다.</p>
+<ul>
+	<li>Ponadto, brakuje im kontekstu, w którym mogliby jej udzielić.</li>
+</ul>
 <p>5-1. 한국에서는 너는 누구냐와 같은 포괄적인 질문이나 이에 대한 해답보다는,</p>
+<ul>
+	<li>W Korei, w odróżnieniu zadawania ogólnych pytań typu „Kim jesteś?” i udzielania odpowiedzi na nie,</li>
+</ul>
 <p>5-2. ‘너는 어떤 사람이 되고 싶으냐’, ‘너는 어떤 직업을 갖고 싶으냐’, 도는 ‘너는 친구와의 관계에서 어떤 사람이라고 생각하느냐” 등과 같이 구체적이며 의도성 지향적인 질문이 일상생활에서 더 자연스러운 질문이 된다.</p>
+<ul>
+	<li>w życiu codziennym bardziej naturalne są pytania konkretne i ukierunkowane, np. „Kim chcesz zostać?”, „Jaki zawód chciałbyś uprawiać?” lub „Jak postrzegasz siebie w relacjach z przyjaciółmi?”.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -82,11 +109,59 @@
 <h3>번역</h3>
 
 <p>6. 한국인들은 영어로 ‘나’ 즉 ‘I’나, ‘나의' 즉 ‘my’를 쓰는 것이 적합한 상황에서 ‘우리’ 즉 ‘we’, ‘우리의’ 즉 ‘our’를 사용하는 경우가 비일비재하다.</p>
+<ul>
+	<li>Częstym zjawiskiem wśród Koreańczyków mówiących w języku angielskim jest używanie „uri” (czyli po polsku „my”) lub „uriui” (czyli „nasz”) w sytuacji, w której powinno się użyć „I” (czyli „ja”) lub „our” (czyli „nasz”).</li>
+</ul>
 <p>7. ‘나의 학교’를 ‘우리 학교’로 칭하는가 하면 심지어 ‘my wife’를 ‘our wife’로 말하기도 한다.</p>
+<ul>
+	<li>„Moją szkołę” nazywają „naszą szkołą”, a nawet zamiast „moja żona” mówią „nasza żoną”.</li>
+</ul>
+
+<h2 class="homework">숙제</h2>
+
 <p>8-1. 한국인들이 ‘나’를 조심해서 사용하는 데는 여러 가지 측면에서 그 이유를 찾아볼 수 있겠으나,</p>
+<ul>
+	<li>Można znaleźć kilka powodów dlaczego Koreańczycy są uważani w używaniu „ja” ale</li>
+	<li>Istnieje wiele powodów, dla których Koreańczycy ostrożnie używają słowa “ja”.</li>
+	<li>Istnieje wiele powodów, dla których Koreańczycy ostrożnie używają "na" (czyli "ja").</li>
+	<li>Przyczyn ostrożności w używaniu zaimka „ja” przez Koreańczyków można doszukiwać się na wielu płaszczyznach,</li>
+	<li>Można znaleźć wiele różnych powodów, dla których Koreańczycy ostrożnie używają określenia “ja”,</li>
+	<li>To, że Koreańczycy ostrożnie używają słowa „ja”, może wywodzić się z różnych punktów widzenia,</li>
+	<li>Można znaleźć różne powody, dlaczego Koreańczycy ostrożnie używają słowa „ja”,</li>
+</ul>
 <p>8-2. 한 가지 분명한 것은 한국 문화에서 ‘나’를 강조할 때 개인주의적인 사람으로 비춰지기 때문이다.</p>
+<ul>
+	<li>oczywiste jest, że w koreańskiej kulturze, używanie „ja” uznawane jest za przejaw indywidualizmu.</li>
+	<li>Jedno jest pewne, w koreańskiej kulturze podkreślenie “ja” sprawia, że dana osoba jest postrzegana jako indywidualista.</li>
+	<li>ale jedno jest pewne - w kulturze koreańskiej podkreślanie "ja" sprawia wrażenie, że ktoś jest osobą indywidualistyczną.</li>
+	<li>jednak jedno jest pewne - w koreańskiej kulturze nadmierne podkreślanie „ja” może sprawiać wrażenie osoby indywidualistycznej.</li>
+	<li>jednak pewnym jest, że w kulturze koreańskiej, kiedy podkreślamy coś używając słowa “ja”, możemy być postrzegani jako indywidualiści.</li>
+	<li>Jedno jest pewne – w kulturze koreańskiej podkreślając słowo „ja”, sprawiamy, że człowiek postrzegany jest jako indywidualista.</li>
+	<li>ale jedna rzecz jest pewna, w kulturze koreańskiej podkreślanie „ja” sprawia, że człowiek jest postrzegany jako osoba indywidualna.</li>
+</ul>
 <p>9. 한국에서 개인주의는 이기주의와 비슷한 뉘앙스를 갖는다.</p>
+<ul>
+	<li>W Korei indywidualizm postrzegany jest podobnie jak bycie samolubnym.</li>
+	<li>W Korei Południowej indywidualizm nosi konotacje zbliżone do egoizmu.</li>
+	<li>W Korei indywidualizm kojarzony jest z egoizmem.</li>
+	<li>W Korei indywidualizm często ma wydźwięk zbliżony do egoizmu.</li>
+	<li>W Korei indywidualizm ma wydźwięk zbliżony do egoizmu.</li>
+	<li>W Korei indywidualizm oraz egoizm mają podobne znaczenie.</li>
+	<li>W Korei indywidualizm jest traktowany jako synonim egoizmu.</li>
+</ul>
 <p>10. 이와 관련해서 나를 강조하는 것은 상황맥락에 따라서 상대를 집단에서 제외 또는 배척하는 것으로 해석될 수 있다.</p>
+<ul>
+	<li>W związku z tym podkreślanie własnej osoby może być odbierane jako wykluczanie innych osób z grupy, w zależności od kontekstu.</li>
+	<li>W związku z tym, w zależności od kontekstu, podkreślenie własnej osoby może być odebrane jako wyłączenie lub wykluczenie innych z grupy.</li>
+	<li>W związku z tym akcentowanie siebie może - w zależności od kontekstu - zostać odebrane jako odsunięcie lub wykluczenie drugiej osoby z grupy.</li>
+	<li>W związku z tym akcentowanie „ja” może być, w zależności od kontekstu, odebrane jako wykluczanie lub odrzucanie rozmówcy z grupy.</li>
+	<li>W związku z tym, podkreślanie siebie (“ja”) może być, w zależności od różnych kontekstów sytuacyjnych, interpretowane jako wykluczenie lub odrzucenie drugiej osoby z grupy.</li>
+	<li>W związku z tym podkreślanie ‘siebie’ w zależności od kontekstu sytuacji, może być odebrane jako wykluczanie lub odrzucenie drugiej osoby z grupy.</li>
+	<li>W związku z tym, podkreślanie „ja”, w zależności od sytuacji, może być interpretowane jako pominięcie bądź wykluczenie drugiej osoby z grupy.</li>
+</ul>
+
+<hr class="homework">
+
 <p>11. 한국말에서 ‘다른 사람’을 뜻하는 ‘남’이라는 말은 서구적 의미의 ‘제삼자’이라는 중립적 의미를 넘어 ‘나’의 반대편에 있는 사람이란 감정가를 내재하고 있다.</p>
 <p>12. 따라서 한국인은 ‘나’라는 말보다는 ‘우리’라는 말을 쓰는 것을 선호하고 습관화하고 있다.</p>
 
