--- a/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/4/index.html
@@ -234,10 +234,44 @@
 <ul>
 	<li>tylko wykształcenie jest tym, co ludzie uznają za sposób na wspinanie się po drabinie społecznej.</li>
 </ul>
+
+<h2 class="homework">숙제</h2>
+
 <p>17. 그래서 전 국민이 교육에 매달리는 거죠. 똑같이!</p>
+<ul>
+	<li>A więc dlatego cały naród opiera się na edukacji. Właśnie dlatego!</li>
+	<li>Dlatego cały naród opiera się na edukacji. Bez wyjątku!”</li>
+	<li>Dlatego przecież cały naród jest tak bezkompromisowy w podejściu do edukacji. Widać podobieństwo!</li>
+	<li>Dlatego wszyscy w kraju kurczowo trzymają się edukacji. Ja również!</li>
+	<li>Dlatego cały naród tak bardzo skupiony jest na edukacji. Tak samo!</li>
+	<li>Dlatego cały naród opiera się na edukacji. Wszyscy tak samo!</li>
+</ul>
 <p>18. 교육이 궁극적으로 계층 상승이나 유지에 도움이 되는 수단은 어느 나라나 마찬가지예요.</p>
+<ul>
+	<li>W każdym kraju edukacja jest ostatecznym środkiem pomagającym utrzymać pozycję w hierarchii.</li>
+	<li>Wyjaśniła także, że „w każdym kraju edukacja jest środkiem, który pomaga albo wspiąć się po szczeblach drabiny społecznej, albo utrzymać dotychczasowy status.</li>
+	<li>Edukacja pozostaje środkiem, który ostatecznie pomaga w utrzymaniu pozycji społecznej lub wspięciu się w hierarchii, tak samo jak w jakimkolwiek innym kraju.</li>
+	<li>Edukacja jest środkiem, który ostatecznie pomaga awansować lub utrzymać status społeczny - i tak jest w każdym kraju.</li>
+	<li>Edukacje jest ostatecznie sposobem na awans społeczny bądź na jego utrzymanie– tak jest w każdym kraju.</li>
+	<li>Ostatecznie, edukacja jest w każdym kraju środkiem, dzięki któremu można awansować społecznie lub utrzymać swoją pozycję.</li>
+</ul>
 <p>19-1. 그런데 한국사회에서는 아주 적나라하게 드러나게 된 게</p>
+<ul>
+	<li>Jednak w społeczeństwie koreańskim pojawia się to bardzo wyraźnie</li>
+	<li>Jednakże w południowokoreańskim społeczeństwie uwidoczniło się to wyjątkowo wyraźnie,</li>
+	<li>Jednak w koreańskim społeczeństwie stało się bardzo oczywiste,</li>
+	<li>Jednak to, co w społeczeństwie koreańskim bardzo wyraźnie wyszło na jaw to to,</li>
+	<li>Jednakże w społeczeństwie koreańskim uwidoczniło się to bardzo wyraźnie,</li>
+</ul>
 <p>19-2. 전쟁 이후로 수능 하나로 결정이 되는 것처럼 돼버린 것 같아요”라고 설명했다.</p>
+<ul>
+	<li>Od czasów wojny wydaje się, że o wszystkimcyduje matura” - wyjaśnia.</li>
+	<li>ponieważ po wojnie zaczęło się wydawać, że wszystko zależy niemal wyłącznie od tego egzaminu.”</li>
+	<li>że po wojnie decyzje podejmowano wyłącznie na podstawie matury.</li>
+	<li>że od czasu wojny wygląda na to jakby egzamin suneung miał rozsztrygać wszystko – wyjaśnił.</li>
+	<li>Ponieważ po wojnie wszystko zaczęło zależeć od egzaminu Suneung.</li>
+	<li>19. Ale w powojennym koreańskim społeczeństwie bardzo wyraźnie ujawniła się tendencja, w której o wszystkim zdaje się decydować jeden egzamin - koreańska matura.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -253,6 +287,15 @@
 <h3>번역</h3>
 
 <p>20. 한국의 수능은 주요 과목인 국어와 수학, 영어 시험을 치른 뒤 한국 역사, 사회과학 등 탐구 영역과 제2외국어 시험 등으로 구성됩니다.</p>
+<ul>
+	<li>Koreańska matura składa się z głównych przedmiotów, takich jak język koreański, matematyka i język angielski, a następnie z obszarów odkrywania wiedzy, takich jak historia Korei oraz nauki społeczne, oraz egzaminu z drugiego języka obcego.</li>
+	<li>W skład koreańskiej matury wchodzą główne przedmioty, takie jak: język koreański, matematyka czy język angielski, a następnie (przeprowadzane są) egzaminy z historii Korei, nauk społecznych, oraz egzamin z drugiego języka obcego.</li>
+	<li>Koreańska matura składa się z głównych przedmiotów, takich jak język koreański, matematyka i angielski, a następnie obejmuje także testy z takich obszarów badawczych jak historia Korei, nauki społeczne oraz drugi język obcy.</li>
+	<li>Egzamin suneung w Korei składa się z głównych przedmiotów takich jak: język koreański, matematyka i angielski, w następnej części obejmuje przedmioty wybrane takie jak historia Korei czy nauki społeczne, a także z drugiego języka obcego i innych elementów.</li>
+	<li>Koreańska matura składa się z podstawowych przedmiotów takich jak język koreański, matematyka i język angielski, a także z części obejmującej historię, nauki społeczne oraz drugi język obcy.</li>
+</ul>
+
+<hr class="homework">
 
 <h2>Źródło:</h2>
 
